helm/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fas5-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fas5
  template:
    metadata:
      labels:
        app: fas5
    spec:
      containers:
      - name: fas5
        image: fas5:latest
        ports:
        - containerPort: 8080
